# wifi-priority-tui

./: .gitignore  CLAUDE.md  PUBLISHING.md  README.md  backup_networks.txt  pyproject.toml  restore_networks.sh  wifi_priority.py
.github/workflows/: update-homebrew-tap.yml
WiFiPrioritySwiftUI/: ContentView.swift  Info.plist  NetworkManager.swift  README.md  WiFiPriorityApp.swift  build.sh
WiFiPrioritySwiftUI/WiFiPrioritySwiftUI/: ContentView.swift  NetworkManager.swift
